# Everything_for_MD

./: .gitignore  Anotacoes.txt  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
src/: __init__.py  app.py  converter.py  extractor.py  formatter.py  gui.py
