[project]
name = "everything-for-md"
version = "0.1.3"
description = "Desktop PDF to Markdown converter"
requires-python = ">=3.12"
authors = [{name = "Pietro Lima"}]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
